fixing the layout issue

--- a/src/app/layout/header/header.css
+++ b/src/app/layout/header/header.css
@@ -1,4 +1,5 @@
 header {
+  width: 100%;
   display: flex;
   height: 15vh;
   justify-content: space-between;
@@ -13,18 +14,32 @@ header {
 
 .logo {
   width: 100px;
+  padding: 1rem;
 }
 
 .title {
   color: #ffffff;
-  font-size: 1rem;
+  font-size: 3rem;
 }
 
 .logOut {
   color: floralwhite !important;
+  font-size: 1rem;
 }
 
 @media screen and (min-width: 1024px) {
+  header {
+    display: flex;
+    height: 15vh;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background-color: #1e272e;
+    border-radius: 20px;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+  }
   .title {
     color: #ffffff;
     font-size: 4rem;
