--- a/src/app/layout/layout/layout.css
+++ b/src/app/layout/layout/layout.css
@@ -15,6 +15,9 @@
 }
 
 @media screen and (min-width: 1024px) {
+  .router-container {
+    margin-top: 0;
+  }
   .row {
     display: flex;
     align-items: start;
